Change imput element width.

--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -10,7 +10,9 @@
 		display : none;
 		visibility : hidden;
 	}
-
+	#lunch-menu {
+		width : 500px;
+	}
 	.show {
 		display : block;
 		visibility : visible;
