--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -36,7 +36,7 @@
      <ul>
 		<li ng-repeat="item in buy.items">Buy {{item.quantity}} {{item.name}} <button class="btn btn-default" ng-click="buy.removeItem($index);"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
 	</ul>
-     <div class="emptyMessage" ng-if="buy.empty">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="buy.items.length === 0">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -45,7 +45,7 @@
      <ul>
        <li ng-repeat="item in bought.items">Bought {{item.quantity}} {{item.name}}</li>
      </ul>
-     <div class="emptyMessage" ng-if="bought.empty">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-if="bought.items.length === 0">Nothing bought yet.</div>
     </div>
   </div>
 </div>
