--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NarrowItDownApp">
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+	<script src="angular.js"></script>
+	<script src="app.js"></script>
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller = "NarrowItDownController as menuList">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
