--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -13,14 +13,15 @@
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input type="text" placeholder="search term" class="form-control" ng-model="menuList.searchTerm">
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+      <button class="btn btn-primary" ng-click="menuList.search(menuList.searchTerm)">Narrow It Down For Me!</button>
     </div>
-
+	<br/><br/>
+	<div class="emptyMessage">{{menuList.emptyString}}</div>
     <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <found-items items="menuList.found" on-remove="menuList.removeItem(index)"></found-items>
   </div>
 
 </body>
